--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Distrimax — Venta y distribución de bebidas</title>
-    <meta name="description" content="Distrimax: venta y distribución de bebidas para negocios y mayoristas. Vinos, champagne y más.">
 
-    <!-- Favicon (desde /public) -->
+    <!-- Titulo de la web -->
+
+    <title>Distrimax — Venta y distribución de bebidas</title>
+    <meta name="description" content="Distrimax">
+
+    <!-- Imagen de la web -->
     <link rel="icon" href="/favicon.jpg?v=7" type="image/jpeg" />
 
-    <!-- Open Graph -->
     <meta property="og:title" content="Distrimax" />
-    <meta property="og:description" content="Venta y distribución de bebidas para negocios y mayoristas." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/favicon.jpg?v=7" />
   </head>
